[package]
name = "brangetree"
version = "0.1.0"
authors = ["Andrew Whitehead <cywolf@gmail.com>"]
edition = "2018"

license = "MIT/Apache-2.0"

[lib]
name = "brangetree"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
byte-slice-cast = "0.3"
flate2 = "1.0"
hex = "0.4.0"
naturalize = "0.1.2"
sha2 = "0.8"
thiserror = "1.0.9"

[[bin]]
name = "brt-hash"
path = "src/bin.rs"
