[package]
name = "brangetree"
version = "0.1.0"
authors = ["Andrew Whitehead <cywolf@gmail.com>"]
edition = "2018"

license = "MIT/Apache-2.0"

[lib]
name = "brangetree"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
byte-slice-cast = "0.3"
digest = "0.8"
flate2 = "1.0"
thiserror = "1.0.9"

[dev-dependencies]
generic-array = "0.13"
hex = "0.4.0"
lazy_static = "1.4"
naturalize = "0.1"
neptune = "0.7"
paired = "0.19"
sha2 = "0.8"

[[example]]
name = "brt-hash"
path = "src/examples/brt-hash.rs"

[[example]]
name = "brt-phash"
path = "src/examples/brt-phash.rs"

[[example]]
name = "brt-find"
path = "src/examples/brt-find.rs"
